<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michaeljohnston.infosecurityapp.ChooseGameActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Instruction"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight=".2"
            android:text="@string/chooseGameInstruction"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/SpamButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="enterSpamHamScreen"
            android:text="@string/spamGameButtonTitle"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/PhishingButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="enterPhishScreen"
            android:text="@string/phishingGameButtonTitle"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/PasswordButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/passwordGameButtonTitle"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
