<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michaeljohnston.infosecurityapp.LearningResourcesActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/GeneralProtips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/learningResourcesProtips"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:autoLink="web"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="305dp"
            tools:text="@string/learningResourcesProtips" />

        <TextView
            android:id="@+id/SpamLinks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/learningResourcesSpamLinks"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:autoLink="web"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/PhishingLinks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/learningResourcesPhishingLinks"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:autoLink="web"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="453dp" />

        <TextView
            android:id="@+id/PasswordLinks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/learningResourcesPasswordLinks"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:autoLink="web"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="156dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
